fix stats on small screens

--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -12,23 +12,18 @@ main.home {
             max-width: 1.5rem;
         }
 
-        .project_line {
-            display: flex;
-            gap: .25rem;
+        .stat {
+            background-color: var(--background-color);
+            padding: .125rem .25rem;
+            border-radius: .25rem;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            height: 1.25rem;
 
-            .stat {
-                background-color: var(--background-color);
-                padding: .125rem .25rem;
-                border-radius: .25rem;
-                display: flex;
-                justify-content: center;
-                width: fit-content;
-
-                svg {
-                    max-height: 1rem;
-                    max-width: 1rem;
-                    padding: 0 .125;
-                }
+            svg {
+                max-height: 1rem;
+                max-width: 1rem;
             }
         }
     }
